add image preview layout

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <input type="file" class="hide" accept="image/*" id="files" multiple>
       </label>
     </section>
+    <section class="preview hide"></section>
   </main>
   <script src="/assets/js/app.js" type="module"></script>
 </body>
