add image save logic

--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
         <input type="file" class="hide" accept="image/*" id="files" multiple>
       </label>
     </section>
-    <section class="preview hide"></section>
+    <section class="preview hide">
+      <div class="preview__image__container"></div>
+      <div class="preview__actions">
+        <button class="preview__button preview__save">Save Files</button>
+      </div>
+    </section>
     <section class="editor hide">
       <div class="editor__container">
         <img src="#" alt="edit image" class="editor__image">
