--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>DocScan</title>
-  <link rel="shortcut icon" href="/assets/img/favicon.svg">
+  <link rel="shortcut icon" href="./assets/img/favicon.svg">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.11/cropper.min.css" integrity="sha512-NCJ1O5tCMq4DK670CblvRiob3bb5PAxJ7MALAz2cV40T9RgNMrJSAwJKy0oz20Wu7TDn9Z2WnveirOeHmpaIlA==" crossorigin="anonymous" />
-  <link rel="stylesheet" href="/assets/css/main.css">
+  <link rel="stylesheet" href="./assets/css/main.css">
 </head>
 <body>
   <header>
-    <img src="/assets/img/favicon.svg" class="logo" alt="logo">
+    <img src="./assets/img/favicon.svg" class="logo" alt="logo">
     <h1>DocScan</h1>
   </header>
   <main>
     <section class="upload">
       <label for="files" class="upload__label">
-        <img src="/assets/img/upload.svg" class="upload__icon">
+        <img src="./assets/img/upload.svg" class="upload__icon">
         <input type="file" class="hide" accept="image/*" id="files" multiple>
       </label>
     </section>
@@ -37,6 +37,6 @@
     </section>
   </main>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.11/cropper.min.js" integrity="sha512-FHa4dxvEkSR0LOFH/iFH0iSqlYHf/iTwLc5Ws/1Su1W90X0qnxFxciJimoue/zyOA/+Qz/XQmmKqjbubAAzpkA==" crossorigin="anonymous"></script>
-  <script src="/assets/js/app.js" type="module"></script>
+  <script src="./assets/js/app.js" type="module"></script>
 </body>
 </html>
