--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Convert multiples document images to A4 size layout pdf quickly.">
   <title>DocScan</title>
-  <link rel="shortcut icon" href="./assets/img/favicon.svg">
+  <link rel="shortcut icon" href="img/favicon.svg">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.11/cropper.min.css" integrity="sha512-NCJ1O5tCMq4DK670CblvRiob3bb5PAxJ7MALAz2cV40T9RgNMrJSAwJKy0oz20Wu7TDn9Z2WnveirOeHmpaIlA==" crossorigin="anonymous" defer/>
-  <link rel="stylesheet" href="./assets/css/main.css">
-  <link rel="manifest" href="./manifest.json">
-  <link rel="apple-touch-icon" href="./assets/img/favicon.svg">
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="manifest" href="manifest.json">
+  <link rel="apple-touch-icon" href="img/favicon.svg">
 </head>
 <body>
   <header>
-    <img src="./assets/img/favicon.svg" class="logo" alt="logo" width="40" height="40">
+    <img src="img/favicon.svg" class="logo" alt="logo" width="40" height="40">
     <h1>DocScan</h1>
   </header>
   <main>
     <section class="upload">
       <label for="files" class="upload__label">
-        <img src="./assets/img/upload.svg" class="upload__icon" alt="upload icon">
+        <img src="img/upload.svg" class="upload__icon" alt="upload icon">
         <input type="file" class="hide" accept="image/*" id="files" multiple>
       </label>
     </section>
@@ -40,8 +40,8 @@
       </div>
     </section>
   </main>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.11/cropper.min.js" integrity="sha512-FHa4dxvEkSR0LOFH/iFH0iSqlYHf/iTwLc5Ws/1Su1W90X0qnxFxciJimoue/zyOA/+Qz/XQmmKqjbubAAzpkA==" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.3.1/jspdf.umd.min.js"></script>
-  <script src="./assets/js/app.js" type="module"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.11/cropper.min.js" integrity="sha512-FHa4dxvEkSR0LOFH/iFH0iSqlYHf/iTwLc5Ws/1Su1W90X0qnxFxciJimoue/zyOA/+Qz/XQmmKqjbubAAzpkA==" crossorigin="anonymous" defer></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.3.1/jspdf.umd.min.js" defer></script>
+  <script src="js/app.js" type="module"></script>
 </body>
 </html>
